--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "@2captcha/captcha-solver": "^1.0.0",
-    "puppeteer": "^22.10"
+    "puppeteer": "^22.10",
+    "puppeteer-core": "^24.1.0"
   },
   "scripts": {
     "start": "node index.js"
