--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@2captcha/captcha-solver": "^1.0.0",
+    "dotenv": "^16.4.7",
     "puppeteer": "^22.10",
     "puppeteer-core": "^24.1.0"
   },
